--- a/hub.ipynb
+++ b/hub.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amhe1346/Computer-Vision/blob/main/hub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FIzICjaph_Wy"
       },
       "source": [
@@ -47,15 +57,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FyDnXd-n4c7Y",
-        "outputId": "d2440fc5-e547-4174-e0a9-247c7073e94e"
+        "outputId": "5ff9d2e3-8613-46ea-dbfb-cc6b6da1eb42"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ultralytics 8.3.217 🚀 Python-3.12.12 torch-2.8.0+cu126 CUDA:0 (Tesla T4, 15095MiB)\n",
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 39.5/112.6 GB disk)\n"
+            "Ultralytics 8.3.220 🚀 Python-3.12.12 torch-2.8.0+cu126 CUDA:0 (Tesla T4, 15095MiB)\n",
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 40.3/112.6 GB disk)\n"
           ]
         }
       ],
@@ -89,9 +99,13 @@
         "hub.login('81157c76207d6579844bf6461f0453e66e4a8c3a8f')\n",
         "\n",
         "# Load your model from HUB (replace 'YOUR_MODEL_ID' with your model ID)\n",
-        "model = YOLO('https://hub.ultralytics.com/models/rTIBpdy67T8ageJuRHnt')\n",
+        "model = YOLO('https://hub.ultralytics.com/models/aALBshoweiOXR7TsUMmK')\n",
         "\n",
         "# Train the model\n",
+        "results = model.train()\n",
+        "hub.login('81157c76207d6579844bf6461f0453e66e4a8c3a8f')\n",
+        "\n",
+        "\n",
         "results = model.train()"
       ]
     }
@@ -100,7 +114,8 @@
     "accelerator": "GPU",
     "colab": {
       "name": "Ultralytics HUB",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
